Placed compiled css in functions.php enqueued styles

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
 /twentytwentyfour
-/twentytwentyone/
-/twentytwentythree/
-/twentytwentytwo/
+/twentytwentyone
+/twentytwentythree
+/twentytwentytwo
